2003-03-05  Nathan Folkman <shmooved@aol.com>

        * TAG: aolserver_v35_b6 

        * nsd/nsd.h: Bumped label/version to aolserver_v35_b6.


2003-03-04  Nathan Folkman <shmooved@aol.com>

        * nsd/conn.c: Re-enabled argument checking in NsTclConnCmd.


2003-02-27  Mark Page  <mpagenva@aol.com>

	* nsd/conn.c: Add 'content' option to ns_conn function to
	provide access to HTTP POST content data.  This introduces,
	by way of a temporary implementation as a bridge to nsd4.0,
	an internal set element onto the query set built when
	processing Posts.  This set element is only used by the
	ns_conn content function.


2003-02-20  Elizabeth Thomas <eathomas93@aol.com>

        * include/Makefile.module.in: Allow the location of the
        install directory to be overridden by $AOLSERVER.      


2003-02-05  Elizabeth Thomas <eathomas93@aol.com>

        * TAG: aolserver_v35_b5

        * nsext/nsext.c: Fixed LocalProxy to move Ns_CloseOnExec
        calls after the file descriptors have been opened.

        * nsd/nsd.h: Bumped label/version to aolserver_v35_b5.


2003-02-01  Nathan Folkman <shmooved@aol.com>

        * nsd/tclmisc.c: Fixed Ns_ThreadList to include connection 
        argument and proc information via Ns_GetProcInfo.

        * tcl/stats.tcl:
        * stats: Removed. Clumsy initial implementation.


2003-01-24  Nathan Folkman <shmooved@aol.com>

        * nsd/tclvar.c: Added a NULL as the last argument to 
        Tcl_AppendResult for nsv_incr error message handling the 
        case of an array which exists, and a key that does not exist.


2002-12-02  Elizabeth Thomas <eathomas93@aol.com>

        * TAG: aolserver_v35_b3

        * nsd/tclmisc.c:  Fix WordEndsInSemi so that
        correctly parses (and doesn't run off end of string) when
        an ampersand is not followed by a space or semicolon
 
        * nsd/nsd.h: Bumped label to aolserver_v35_b3


2002-12-02  Jim Davidson <jgdavidson@aol.com>
