@@ -779,7 +779,7 @@ static int
 CgiExec(Cgi *cgiPtr, Ns_Conn *conn)
 {
     int i, index, opipe[2];
-    char *s, *e;
+    char *s, *p, *e;
     Ns_DString *dsPtr;
     Mod *modPtr = cgiPtr->modPtr;
 
@@ -847,13 +847,44 @@ CgiExec(Cgi *cgiPtr, Ns_Conn *conn)
         SetUpdate(cgiPtr->env, "PATH_INFO", "");
     }
     SetUpdate(cgiPtr->env, "GATEWAY_INTERFACE", "CGI/1.1");
-    SetUpdate(cgiPtr->env, "SERVER_NAME", Ns_ConnHost(conn));
     Ns_DStringVarAppend(dsPtr, Ns_InfoServer(), "/", Ns_InfoVersion(), NULL);
     SetUpdate(cgiPtr->env, "SERVER_SOFTWARE", dsPtr->string);
     Ns_DStringTrunc(dsPtr, 0);
     Ns_DStringPrintf(dsPtr, "HTTP/%2.1f", conn->request->version);
     SetUpdate(cgiPtr->env, "SERVER_PROTOCOL", dsPtr->string);
     Ns_DStringTrunc(dsPtr, 0);
+
+    /*
+     * Determine SERVER_NAME from the conn location.
+     */
+
+    s = Ns_ConnLocation(conn);
+    p = NULL;
+    if (s != NULL) {
+        if (strstr(s, "://") == NULL) {
+            Ns_Log(Warning, "nscgi: location does not contain '://'");
+            s = NULL;
+        } else {
+            s = strchr(s, ':');         /* Get past the http */
+            if (s != NULL) {
+                s += 3;                 /* Get past the // */
+                p = strchr(s, ':');     /* Get to the port number */ 
+            }
+        }
+    }
+    if (s == NULL) {
+        s = Ns_ConnHost(conn);
+        SetUpdate(cgiPtr->env, "SERVER_NAME", s);
+    } else {
+        if (p == NULL) {
+            Ns_DStringAppend(dsPtr, s);           /* No port number */
+        } else {
+            Ns_DStringNAppend(dsPtr, s, (p - s)); /* Port number exists */
+        }
+        s = Ns_DStringExport(dsPtr);
+        SetUpdate(cgiPtr->env, "SERVER_NAME", s);
+        ns_free(s);
+    }
 
     /*
      * Determine SERVER_PORT from the conn location.
